--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-server.servlet.context-path=/SpringMVC
-spring.mvc.servlet.path=/servlet
+#server.servlet.context-path=/SpringMVC
+#spring.mvc.servlet.path=/servlet
+
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
+#spring.mvc.static-path-pattern=/ressources/**
 
 server.port=8084
 
